category controller updated for Swagger
